# mcal

./: .flutter-plugins-dependencies  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SYNCHRONIZATION_UTILITIES.md  TEST_HELPERS_README.md  TEST_INFRASTRUCTURE_FIXES.md  TODO.md  build.yaml  frb.yaml  integration_test_report.md  pubspec.yaml  rcal_library_integration_report.md  todo.md
coverage/: lcov.info
docs/: android-calendar-directory.md
fixes/: 02_performance_optimization_bulk_operations.md  03_event_management_systemic_issues.md  04_certificate_integration_test_failures.md  05_conflict_resolution_test_failures.md  06_edge_case_handling_improvements.md  07_test_infrastructure_improvements.md  08_test_timeout_configuration.md  09_mocking_layer_enhancements.md  10_test_coverage_analysis.md
integration_test/: accessibility_integration_test.dart  android_notification_delivery_integration_test.dart  app_integration_test.dart  bulk_operations_performance_test.dart  calendar_integration_test.dart  certificate_integration_test.dart  conflict_resolution_integration_test.dart  edge_cases_integration_test.dart  event_crud_integration_test.dart  event_crud_integration_test.dart.backup  event_form_integration_test.dart  event_form_integration_test.dart.bak  event_list_integration_test.dart  gesture_integration_test.dart  lifecycle_integration_test.dart  notification_integration_test.dart  performance_integration_test.dart  (+3 more)
lib/: api.dart  (+7 more)
native/: Cargo.toml  api.frb
native/src/: api.frb  api.rs  frb_generated.rs  lib.rs
native/src/src/: frb_generated.rs
(+221 files in other folders)
