[package]
name = "mcal_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "2"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempdir = "0.3"
