[package]
name = "mcal_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
webpki = { version = "0.22.4", features = ["alloc"] }
webpki-roots = "0.22.4"
url = "2.5"
x509-parser = "0.15"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1"

[dev-dependencies]
tempdir = "0.3"
